[package]
name = "hellomoon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.152", features =["derive"] }
serde_json = "1.0.92"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"

